solve z-index problems

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -2236,7 +2236,7 @@ p {
   position: fixed;
   right: 20px;
   bottom: 20px;
-  z-index: 10000;
+  z-index: 100;
   cursor: pointer;
   display: none;
   transition: var(--main-transition);
